	Patch partially by Mark Majeres.  The problem was first reported in
	https://lists.gnu.org/archive/html/nano-devel/2015-06/msg00003.html.
	* src/text.c (do_undo): Adjust whitespace after the previous change.
	* src/text.c (add_undo): Elide an unneeded variable and correct two
	comments.  And try to put the more frequent condition first.

2015-06-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Add some debugging code to track which
	multidata codes (for multiline regexes) get assigned to which lines.
	* src/winio.c (edit_draw): Start and end regexes can be very similar;
	so if a found start has been qualified as an end earlier, believe it
	and skip to the next step.  This helps with Python's docstrings.
	* src/winio.c (edit_draw): When the whole line has been coloured,
	don't bother looking for any more starts.  This prevents some lines
	from being erroneously marked as CENDAFTER instead of CWHOLELINE.
	* src/*.c: Don't check for non-NULL before freeing; it's unneeded.

2015-06-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (get_key_buffer): Add some debugging code to make it
	easy to see what codes a key stroke produces.

2015-06-07  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Show the node with the command-line options
	in the main menu, to make it easy to find.
	* doc/texinfo/nano.texi: Improve some formatting, hyphenation, wording
	and dashes.  And remove some confusing, historical things.
	* doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Clarify the
	meaning of --backupdir: it doesn't just specify a directory for saving
	backup files, it mainly causes uniquely numbered backups to be made.
	* doc/man/nano.1: Add a section on the non-obvious functioning of the
	cutbuffer and the mark.

2015-06-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h: Fix compilation with --enable-tiny.
	* nano.spec.in: Add the post-install and pre-uninstall rules for the